# AdventOfCode

./: .gitignore  Day2.ipynb  Day3.ipynb  Day4.ipynb  Day5.ipynb  README.md  day1_solve.py  get_data.py  pyproject.toml  template.py
2023/: AoC_Data.ipynb  Day1.ipynb  Day10.ipynb  Day11.ipynb  Day12.ipynb  Day13.ipynb  Day3.ipynb  Day4.ipynb  Day5.ipynb  Day6.ipynb  Day7.ipynb  Day8.ipynb  Day9.ipynb
2024/: 1_p1.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  get_data.py  hello_world.rs  template.py
2024/1/: day01.py
2024/10/: day10.py
2024/11/: day11.py
2024/12/: day12.py
2024/13/: day13.py
2024/14/: day14.py
2024/15/: day15.py
2024/16/: day16.py
2024/17/: day17.py
2024/18/: day18.py
2024/19/: day19.py
2024/2/: day02.py
2024/20/: day20.py
2024/21/: day21.py
2024/22/: day22.py
2024/23/: day23.py
2024/24/: day24.py
2024/25/: day25.py
2024/3/: day03.py
2024/4/: day04.py
2024/5/: day05.py
2024/6/: day06.py
2024/7/: day07.py
2024/8/: day08.py
2024/9/: day09.py
2025/1/: day01.py
2025/10/: day10.py
2025/11/: day11.py
2025/12/: day12.py
2025/2/: day02.py
2025/3/: day03.py
2025/4/: day04.py
2025/5/: day05.py
2025/6/: day06.py
2025/7/: day07.py
2025/8/: day08.py
2025/9/: day09.py
