[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["Min A Cho Zeno <minacho19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.3"
numpy = "^2.1.3"
z3-solver = "^4.13.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
